get config method for log upload write